--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pinata/sdk": "^1.1.25",
     "body-parser": "^1.20.0",
     "caver-js": "^1.8.1",
     "caver-js-ext-kas": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "router": "^1.3.7"
   }
